# from_line

./: Cargo.toml  README.md  README_PT-BR.md
from_line/: Cargo.toml
from_line/src/: lib.rs
from_line/src/impls/: impls_decimal.rs  impls_int.rs  impls_string.rs  mod.rs
from_line/src/regex/: mod.rs  regex_const.rs
from_line/src/traits/: from_string.rs
from_line_derive/: Cargo.toml
from_line_derive/src/: lib.rs
from_line_tests/: Cargo.toml
from_line_tests/src/: decimal_tests.rs  derive_test.rs  lib.rs
